added random view in Movies and by ID in customer

--- a/TheVidStore/Views/Home/Contact.cshtml
+++ b/TheVidStore/Views/Home/Contact.cshtml
@@ -4,14 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<address>https://github.com/DoNnMyTh<br>thevidshop.visualstudio.com<br><br></address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Developer:</strong>   <a href="mailto:Donnmyth@yandex.com">Donnmyth@yandex.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Donnmyth@icloud.com">Donnmyth@icloud.com</a>
 </address>
