modification of layout and small fix

--- a/TheVidStore/Views/Home/Contact.cshtml
+++ b/TheVidStore/Views/Home/Contact.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
+<h3>This Application is designed to make ur job at your store easy.<br></h3>
+
+<p>Use this area to provide additional information.</p>
+
+
 <h3>@ViewBag.Message</h3>
 
 <address>https://github.com/DoNnMyTh<br>thevidshop.visualstudio.com<br><br></address>
