--- a/TheVidStore/Views/Shared/_Layout.cshtml
+++ b/TheVidStore/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Customer", "Details", "customer")</li>
+                    <li>@Html.ActionLink("Movies", "Random", "movies")</li>
+                    <li>@Html.ActionLink("About", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
