--- a/TheVidStore/Views/customer/Details.cshtml
+++ b/TheVidStore/Views/customer/Details.cshtml
@@ -5,9 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
+<h2>Customers</h2>
+
 @foreach (var customer in Model.customer)
-{
-    <li>
+{<h5>
         @customer.Name
-    </li>
+    </h5>
 }
