manages and changed db for movies and customers

--- a/TheVidStore/Views/Shared/_Layout.cshtml
+++ b/TheVidStore/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Customer", "Details", "customer")</li>
+                    <li>@Html.ActionLink("Customer", "Index", "customer")</li>
                     <li>@Html.ActionLink("Movies", "Random", "movies")</li>
                     <li>@Html.ActionLink("About", "Contact", "Home")</li>
                 </ul>
