connected costomer and movies to db

--- a/TheVidStore/Views/Shared/_Layout.cshtml
+++ b/TheVidStore/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Customer", "Index", "customer")</li>
-                    <li>@Html.ActionLink("Movies", "Random", "movies")</li>
+                    <li>@Html.ActionLink("Movies", "Index", "movies")</li>
                     <li>@Html.ActionLink("About", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
