--- a/TheVidStore/Views/customer/Index.cshtml
+++ b/TheVidStore/Views/customer/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-string
 <h2>Customers</h2>
 
-<table border="1" class="table" cellspacing="1" cellpadding="2">
+<table class="table-hover table-bordered table-striped">
     <thead>
         Customers Data
     </thead>
@@ -27,6 +27,15 @@ string
             <th>
                 Discount rate
             </th>
+            <th>
+                Date Of Birth
+            </th>
+            <th>
+                Details
+            </th>
+            <th>
+                Edit
+            </th>
         </tr>
 
         @foreach (var customer in Model)
@@ -41,8 +50,22 @@ string
                 <td>
                     @customer.IsSubscribedToNewsletter
                 </td>
-                <td>@customer.MembershipType.Name</td>
-                <td>@customer.MembershipType.DiscountRate%</td>
+                <td>
+                    @customer.MembershipType.Name
+                </td>
+                <td>
+                    @customer.MembershipType.DiscountRate%
+                </td>
+                <td>
+                    @customer.DateOfBirth
+                </td>
+                <td>
+                    @Html.ActionLink("customers","Det", new { id = customer.Id })
+                </td>
+                <td>
+                    @Html.ActionLink("customers", "Edit", new { id = customer.Id })
+                </td>
+
 
             </tr>
 
