--- a/TheVidStore/Views/customer/Index.cshtml
+++ b/TheVidStore/Views/customer/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>Customers</h2>
 <div class="navbar-right">
-    <button onclick="location.href='@Url.Action("NewMovie", "Customer")'" ;return false;><i class="btn btn-info">Add Customer</i></button>
+    <button onclick="location.href='@Url.Action("New", "Customer")'" ;return false;><i class="btn btn-info">Add Customer</i></button>
 </div>
 
 <table class="table-hover table-bordered table-striped">
