--- a/TheVidStore/Views/Movies/Random.cshtml
+++ b/TheVidStore/Views/Movies/Random.cshtml
@@ -10,7 +10,7 @@
 <br />
 
 @{
-    var className = Model.Movie.Count > 5 ? "popular" : null;
+    var className = Model.Count > 5 ? "popular" : null;
 }
 
 <h4 class="@className">
