--- a/TheVidStore/Views/customer/CustomerForm.cshtml
+++ b/TheVidStore/Views/customer/CustomerForm.cshtml
@@ -11,7 +11,7 @@
 
 
 
-@using (Html.BeginForm("Create", "Customer"))
+@using (Html.BeginForm("Save", "Customer"))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
@@ -33,6 +33,7 @@
         @Html.DropDownListFor(m => m.Customer.MembershipType,new SelectList(Model.MembershipTypes, "Id" , "Name"),"select membership type" , new { @class = "form-control" })
 
     </div>
+    @Html.HiddenFor(m => m.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 
 }
