--- a/TheVidStore/Views/Movies/NewMovie.cshtml
+++ b/TheVidStore/Views/Movies/NewMovie.cshtml
@@ -31,6 +31,7 @@
         @Html.TextBoxFor(m => m.Movie.GenreOfMovie, new { @class = "form-control" })
 
     </div>
+    @Html.HiddenFor(m => m.Movie.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 
 }
