--- a/TheVidStore/Views/customer/CustomerForm.cshtml
+++ b/TheVidStore/Views/customer/CustomerForm.cshtml
@@ -30,7 +30,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipType)
-        @Html.DropDownListFor(m => m.Customer.MembershipType,new SelectList(Model.MembershipTypes, "Id" , "Name"),"select membership type" , new { @class = "form-control" })
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId ,new SelectList(Model.MembershipTypes, "Id" , "Name"),"select membership type" , new { @class = "form-control" })
 
     </div>
     @Html.HiddenFor(m => m.Customer.Id)
