--- a/TheVidStore/Views/customer/CustomerForm.cshtml
+++ b/TheVidStore/Views/customer/CustomerForm.cshtml
@@ -16,11 +16,12 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new {  @class = "form-control"  })
-
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.Customer.DateOfBirth)
-        @Html.TextBoxFor(m => m.Customer.DateOfBirth, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Customer.Birthdate)
+        @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control" })
 
     </div>
     <div class="checkbox">
