--- a/TheVidStore/Views/Movies/Det.cshtml
+++ b/TheVidStore/Views/Movies/Det.cshtml
@@ -11,7 +11,7 @@ Name : @Model.Name <br />
 
 Number of Copies avilable : @Model.NumberOfMovies <br />
 
-Year Of Release : @Model.YearOfRelease<br />
+Year Of Release : @Model.Year<br />
 <button onclick="location.href='@Url.Action("Index", "Movies")';return false;"class="btn btn-danger">Back</button>
 
 
