--- a/TheVidStore/Views/Movies/Index.cshtml
+++ b/TheVidStore/Views/Movies/Index.cshtml
@@ -36,7 +36,7 @@
                     @movies.NumberOfMovies
                 </td>
                 <td>
-                    @movies.YearOfRelease
+                    @movies.Year.Year
                 </td>
                 <td>
                     @movies.GenreOfMovie
@@ -47,7 +47,7 @@
                 <td>
                     <button onclick="location.href='@Url.Action("EditMovie","movies",  new { id = movies.Id })';return false;"class="btn btn-primary">Edit</button>
                 </td>
-               
+
             </tr>
 
         }
