--- a/TheVidStore/Views/customer/CustomerForm.cshtml
+++ b/TheVidStore/Views/customer/CustomerForm.cshtml
@@ -13,15 +13,23 @@
 
 @using (Html.BeginForm("Save", "Customer"))
 {
+    @Html.ValidationSummary(true, "Please Fix The Following Errors.")
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
-        @Html.TextBoxFor(m => m.Customer.Name, new {  @class = "form-control"  })
+        @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Customer.Name)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MembershipType)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "select membership type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Birthdate)
         @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
 
     </div>
     <div class="checkbox">
@@ -29,13 +37,16 @@
             @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) Subscribed To Newsletter ?
         </level>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.MembershipType)
-        @Html.DropDownListFor(m => m.Customer.MembershipTypeId ,new SelectList(Model.MembershipTypes, "Id" , "Name"),"select membership type" , new { @class = "form-control" })
 
-    </div>
     @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 
 }
+
+@section scripts
+
+    {
+      @Scripts.Render("~/bundles/jqueryval")
+    }
 
