added Dto Api and now more stable

--- a/TheVidStore/Views/Home/Index.cshtml
+++ b/TheVidStore/Views/Home/Index.cshtml
@@ -4,24 +4,24 @@
 
 <div class="jumbotron">
     <h1>The VIdShop<br></h1>
-    <p class="lead">One thing You want to have to help you in your shop.<br></p>
+    <p class="lead">One thing You want to have in your shop.<br></p>
     <p><a href="https://github.com/DoNnMyTh/TheVidStore/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>One Stop<br></h2>
-        <p>This application is just designed for your preferences, and can me changed according to your needs in future.&nbsp; <br></p>
-       
+        <p>This application is designed to your preferences, and can be changed according to your needs in future.&nbsp; <br></p>
+
     </div>
     <div class="col-md-4">
         <h2>View</h2>
-        <p>Easy to Manage your customer database.</p>
-        
+        <p>Easy to Manage.</p>
+
     </div>
     <div class="col-md-4">
         <h2>Manage</h2>
-        <p>You can easily manage ypour stock and add or remove movies accourding to your need.</p>
-       
+        <p>You can easily manage your stock and add or remove movies according to your need.</p>
+
     </div>
 </div>
