--- a/TheVidStore/Views/Movies/Index.cshtml
+++ b/TheVidStore/Views/Movies/Index.cshtml
@@ -5,9 +5,9 @@
 
 <h2>Movies</h2>
 <div class="navbar-right">
-    <button onclick="location.href='@Url.Action("NewMovie", "Movies")'" ;return false;><i class="btn btn-info">Add Movie</i></button>
+    <button  onclick="location.href='@Url.Action("NewMovie", "Movies")'" ;return false;><i class="btn btn-info">Add Movie</i></button>
 </div>
-<table class="table-hover table-bordered table-striped" >
+<table id="movies" class="table-hover table-bordered table-striped" >
 
     <thead>Movies Data</thead>
     <tr>
@@ -47,12 +47,41 @@
                 <td>
                     <button onclick="location.href='@Url.Action("EditMovie","movies",  new { id = movies.Id })';return false;"class="btn btn-primary">Edit</button>
                 </td>
+                <td>
+                    <button data-movie-id="@movies.Id" class="btn btn-link btn-danger js-delete">Delete</button>
+                </td>
 
             </tr>
 
         }
     </tbody>
 </table>
+@section scripts{
+
+    <script>
+    $(document).ready(function () {
+        $("#movies .js-delete").on("click", function () {
+            var button = $(this);
+
+            if ( confirm("Are you sure you want to delete this movie?"))
+            {
+                $.ajax({
+                    url: "/api/movies/" + button.attr("data-movie-id"),
+                    method: "DELETE",
+                    success: function(){
+                        button.parents("tr").remove();
+                    }
+                });
+            }
+        });
+    });
+    </script>
+}
+
+
+
+
+
 
 
 
