--- a/TheVidStore/Views/customer/Index.cshtml
+++ b/TheVidStore/Views/customer/Index.cshtml
@@ -8,7 +8,7 @@
     <button onclick="location.href='@Url.Action("New", "Customer")'" ;return false;><i class="btn btn-info">Add Customer</i></button>
 </div>
 
-<table class="table-hover table-bordered table-striped">
+<table id="customers" class="table-hover table-bordered table-striped">
     <thead>
         Customers Data
     </thead>
@@ -39,6 +39,9 @@
             </th>
             <th>
                 Edit
+            </th>
+            <th>
+                Delete
             </th>
         </tr>
 
@@ -75,9 +78,32 @@
                 <td>
                     <button onclick="location.href='@Url.Action("Edit", new { id = customer.Id })';return false;" class="btn btn-primary">Edit</button>
                 </td>
+                <td>
+                   <button data-customer-id="@customer.Id" class="btn btn-link btn-danger js-delete">Delete</button>
+                </td>
              </tr>
 
         }
     </tbody>
 </table>
+@section scripts{
 
+<script>
+    $(document).ready(function () {
+        $("#customers .js-delete").on("click", function () {
+            var button = $(this);
+
+            if ( confirm("Are you sure you want to delete this customer?"))
+            {
+                $.ajax({
+                    url: "/api/customers/" + button.attr("data-customer-id"),
+                    method: "DELETE",
+                    success: function(){
+                        button.parents("tr").remove();
+                    }
+                });
+            }
+        });
+    });
+</script>
+}
