--- a/TheVidStore/Views/Movies/Index.cshtml
+++ b/TheVidStore/Views/Movies/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Movies Information";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -7,7 +7,7 @@
 <p class="navbar-right">
     <button onclick="location.href='@Url.Action("NewMovie", "Movies")'" ;return false;><i class="btn btn-info">Add Movie</i></button>
 </p>
-<table id="movies1" class="table-hover table-bordered table-striped">
+<table id="movies1" class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
             <th>  Movies</th>
