--- a/TheVidStore/Views/customer/Index.cshtml
+++ b/TheVidStore/Views/customer/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Customer Information";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
@@ -9,7 +9,7 @@
     <button onclick="location.href='@Url.Action("New", "Customer")'" ;return false;><i class="btn btn-info">Add Customer</i></button>
 </p>
 
-<table id="customers1" class="table-hover table-bordered table-striped">
+<table id="customers1" class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
             <th>
