--- a/TheVidStore/Views/Movies/Index.cshtml
+++ b/TheVidStore/Views/Movies/Index.cshtml
@@ -14,56 +14,45 @@
 
             <th> Number of copies</th>
 
-            <th> Year of release</th>
-
-            <th> Genre</th>
-            <th>
-                Details
-            </th>
-            <th>
-                Edit
-            </th>
             <th>
                 Delete
             </th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var movies in Model)
-        {
-            <tr>
-                <td>
-                    @movies.Name
-                </td>
-                <td>
-                    @movies.NumberOfMovies
-                </td>
-                <td>
-                    @movies.Year.Year
-                </td>
-                <td>
-                    @movies.GenreOfMovie
-                </td>
-                <td>
-                    <button onclick="location.href='@Url.Action("Det", new { id = movies.Id })';return false;" class="btn btn-info">Details</button>
-                </td>
-                <td>
-                    <button onclick="location.href='@Url.Action("EditMovie","movies",  new { id = movies.Id })';return false;" class="btn btn-primary">Edit</button>
-                </td>
-                <td>
-                    <button data-movie-id="@movies.Id" class="btn btn-danger js-delete">Delete</button>
-                </td>
-
-            </tr>
-
-        }
     </tbody>
 </table>
 
 @section scripts{
     <script>
         $(document).ready(function () {
-            $('#movies1').dataTable();
+            $('#movies1').dataTable({
+                ajax: {
+                    url: "/api/movies",
+                    dataSrc: ""
+                },
+                columns:[
+                    {
+                        data: "name",
+                        render: function(data, type , movie){
+                            return "<a href='/movie/edit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+                    },
+
+                    {
+                        data:"numberOfMovies"
+                    },
+                    {
+                        data:"id",
+                        render: function(data){
+                            return "<button class='btn btn-danger js-delete' data-movie-id=" + data + ">Delete</button>";
+                        }
+                    }
+
+
+                ]
+
+            });
         });
 
             $(document).ready(function () {
