--- a/TheVidStore/Views/customer/Index.cshtml
+++ b/TheVidStore/Views/customer/Index.cshtml
@@ -34,7 +34,7 @@
         $(document).ready(function () {
 
 
-            $("#customers1").DataTable({
+       var table =     $("#customers1").DataTable({
                 ajax: {
                     url: "/api/customers",
                     dataSrc: ""
@@ -61,10 +61,6 @@
 
         });
 
-        });
-
-        $(document).ready(function () {
-
             $("#customers1").on("click", ".js-delete", function () {
                 var button = $(this);
                 bootbox.confirm("Are you sure you want to delete this Customer?", function (result) {
@@ -75,7 +71,7 @@
                                     url: "/api/customers/" + button.attr("data-customer-id"),
                                     method: "DELETE",
                                     success: function () {
-                                        button.parents("tr").remove();
+                                     table.row(button.parents("tr")).remove().draw();
                                     }
                                 }
                 );
