just moving to finish line

--- a/TheVidStore/Views/Home/Index.cshtml
+++ b/TheVidStore/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>The VIdShop<br></h1>
     <p class="lead">One thing You want to have in your shop.<br></p>
-    <p><a href="https://github.com/DoNnMyTh/TheVidStore/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="mailto:Donnmyth@icloud.com" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
