--- a/TheVidStore/Views/Shared/_Layout.cshtml
+++ b/TheVidStore/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("New Rental", "New", "Rentals")</li>
                     <li>@Html.ActionLink("Customer", "Index", "customer")</li>
                     <li>@Html.ActionLink("Movies", "Index", "movies")</li>
                     <li>@Html.ActionLink("About", "Contact", "Home")</li>
