--- a/TheVidStore/Views/Rentals/New.cshtml
+++ b/TheVidStore/Views/Rentals/New.cshtml
@@ -10,7 +10,7 @@
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id="customer" data-rule-validCustomer="true" required type="text" value="" class="form-control" />
+            <input id="customer" name="customer" data-rule-validCustomer="true" required type="text" value="" class="form-control" />
         </div>
     </div>
 
@@ -18,7 +18,7 @@
     <div class="form-group">
         <label>Movie</label>
         <div class="tt-container">
-            <input id="movie" data-rule-atLeastOneMovie="true" type="text" value="" class="form-control" />
+            <input id="movie" name="movie" data-rule-atLeastOneMovie="true" type="text" value="" class="form-control" />
         </div>
     </div>
     <div class="row">
@@ -103,9 +103,9 @@
             }, "Please select at least one movie.");
 
 
-            $("#newRental").validate({
+          var validator =   $("#newRental").validate({
                 submitHandler: function () {
-                    e.preventDefault();
+
 
 
                     $.ajax({
@@ -115,11 +115,20 @@
                     })
                     .done(function () {
                         toastr.success("Rentals successfully recorded.");
+
+                        $("#customer").typeahead("val", "");
+                        $("#movie").typeahead("val", "");
+                        $("#movies").empty();
+
+                        vm = { movieIds: {} };
+
+                        validator.resetForm();
+
                     })
                     .fail(function () {
                         toastr.error("something unexpected happened.");
-                    })
-
+                    });
+                    return false;
                 }
         });
 
